agregado de descripcion del lugar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Arsha Bootstrap Template - Index</title>
+  <title>Redes - Segundo Parcial</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -142,15 +142,14 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About Us</h2>
+          <h2>Descripcion del Lugar</h2>
         </div>
 
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+              En el contexto de la pandemia, se habilitó un nuevo centro de vacunación principalmente para vacunas contra el Covid-19 pero ampliable a todo tipo de vacunas y con posibilidad de atención medica de complejidad media.
+              El centro ya está en funcionamiento, pero actualmente tienen dos PC conectadas directamente al Router de su proveedor de internet y se les dificulta el trabajo de cargar toda la información de los pacientes.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
