correcciones de textos index

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 
         <div class="section-title">
           <h2>Servicios Ofrecidos</h2>
-          <p>El proyecto propuesto planea ofrecerá 4 servicios de red. A continuación se detallan los mismo.</p>
+          <p>El proyecto propuesto planea ofrecer 4 servicios de red. A continuación se detallan los mismo.</p>
         </div>
 
         <div class="row">
