--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
           <li><a class="nav-link scrollto" href="#about">Descripcion</a></li>
           <li class="dropdown"><a href="#Disenio"><span>Propuesta</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#Disenio">Diseño de Topología</a></li>
+              <li><a href="#Disenio">Infraestructura</a></li>
+              <li><a href="#skills">Direccionamiento IP</a></li>
               <li><a href="#portfolio">Listado de Equipos</a></li>
               <li><a class="nav-link scrollto" href="#Servicios">Servicios</a></li>
             </ul>
